Fix image scaling on mobile viewports

--- a/src/archedbrows/static/style.css
+++ b/src/archedbrows/static/style.css
@@ -262,6 +262,7 @@ article {
     gap: 0.25rem;
     position: relative;
     width: 50rem;
+    max-width: 100svw;
 
     &.listed-post {
         &:hover {
